Web + new  resources

--- a/semjournals-api/src/main/webapp/WEB-INF/shiro.ini
+++ b/semjournals-api/src/main/webapp/WEB-INF/shiro.ini
@@ -15,6 +15,10 @@
 #
 
 [main]
+securityManager.subjectDAO.sessionStorageEvaluator.sessionStorageEnabled = false
+
+authcBasic = com.semjournals.shiro.CrossOriginBasicHttpAuthenticationFilter
+
 jdbcRealm=com.semjournals.shiro.SEMJournalsJdbcRealm
 jdbcRealm.permissionsLookupEnabled=true
 securityManager.realms = $jdbcRealm
