--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
                 <artifactId>jersey-container-servlet</artifactId>
                 <version>2.22.1</version>
             </dependency>
+            <dependency>
+                <groupId>com.sun.jersey.contribs</groupId>
+                <artifactId>jersey-multipart</artifactId>
+                <version>1.8</version>
+            </dependency>
 
             <!-- Security -->
             <dependency>
