--- a/semjournals-api/pom.xml
+++ b/semjournals-api/pom.xml
@@ -30,6 +30,10 @@
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.sun.jersey.contribs</groupId>
+            <artifactId>jersey-multipart</artifactId>
+        </dependency>
 
         <!-- Apache Shiro -->
         <dependency>
