--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <shiro.version>1.2.4</shiro.version>
         <postgres.version>9.4.1207</postgres.version>
         <guava.version>18.0</guava.version>
+        <jersey.version>2.22.1</jersey.version>
     </properties>
 
     <dependencyManagement>
@@ -50,12 +51,17 @@
             <dependency>
                 <groupId>org.glassfish.jersey.containers</groupId>
                 <artifactId>jersey-container-servlet</artifactId>
-                <version>2.22.1</version>
+                <version>${jersey.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.sun.jersey.contribs</groupId>
-                <artifactId>jersey-multipart</artifactId>
-                <version>1.8</version>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-multipart</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jvnet.mimepull</groupId>
+                <artifactId>mimepull</artifactId>
+                <version>1.9.6</version>
             </dependency>
 
             <!-- Security -->
